[gd_scene load_steps=5 format=3 uid="uid://dfuyg1bl3fl0o"]

[ext_resource type="Script" path="res://script/player.gd" id="1_5wpfc"]
[ext_resource type="PackedScene" uid="uid://dsdnmxtdugrbv" path="res://player-max/animated_sprite_2d.tscn" id="2_b2j6n"]

[sub_resource type="CircleShape2D" id="CircleShape2D_l1ax0"]
radius = 19.0263

[sub_resource type="CircleShape2D" id="CircleShape2D_gwskn"]
radius = 4.12311

[node name="player" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource("1_5wpfc")

[node name="AnimatedSprite2D" parent="." instance=ExtResource("2_b2j6n")]
position = Vector2(0, -4)

[node name="player_hitbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_hitbox"]
y_sort_enabled = true
position = Vector2(1, -3)
shape = SubResource("CircleShape2D_l1ax0")

[node name="Attack_timer" type="Timer" parent="."]
wait_time = 0.5

[node name="deal_attack_timer" type="Timer" parent="."]
wait_time = 0.5

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 3)
shape = SubResource("CircleShape2D_gwskn")

[node name="Marker2D" type="Marker2D" parent="."]

[node name="healthBar" type="ProgressBar" parent="."]
modulate = Color(0.424884, 0.678061, 1.15514e-06, 1)
offset_left = -6.0
offset_top = 8.0
offset_right = 136.0
offset_bottom = 35.0
scale = Vector2(0.1, 0.1)
show_percentage = false

[node name="regin_timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[connection signal="body_entered" from="player_hitbox" to="." method="_on_player_hitbox_body_entered"]
[connection signal="body_exited" from="player_hitbox" to="." method="_on_player_hitbox_body_exited"]
[connection signal="timeout" from="Attack_timer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="deal_attack_timer" to="." method="_on_deal_attack_timer_timeout"]
[connection signal="timeout" from="regin_timer" to="." method="_on_regin_timer_timeout"]
